refactor: sonar issues