@@ -62,22 +62,19 @@ public class QuestioningAccreditationController {
             @ApiResponse(responseCode = "404", description = "Not found"),
             @ApiResponse(responseCode = "400", description = "Bad Request")
     })
-    @Deprecated(since = "2.6.0", forRemoval = true)
-    public ResponseEntity<?> getQuestioningAccreditation(@PathVariable("id") Long id) {
+    @Deprecated(since = "2.6.0")
+    public List<QuestioningAccreditationDto> getQuestioningAccreditation(@PathVariable("id") Long id) {
         log.warn("DEPRECATED");
 
         Questioning optQuestioning = questioningService.findbyId(id);
 
-        try {
-            return new ResponseEntity<>(
-                    optQuestioning.getQuestioningAccreditations().stream().map(this::convertToDto)
-                            .toList(), HttpStatus.OK);
 
-        } catch (Exception e) {
-            return new ResponseEntity<>("Error", HttpStatus.INTERNAL_SERVER_ERROR);
-        }
+        return
+                optQuestioning.getQuestioningAccreditations().stream().map(this::convertToDto)
+                        .toList();
+
+
     }
-
 
 
     /**
@@ -91,10 +88,11 @@ public class QuestioningAccreditationController {
             @ApiResponse(responseCode = "404", description = "NotFound")
     })
     @Transactional
-    @Deprecated(since = "2.6.0", forRemoval = true)
-    public ResponseEntity<?> postQuestioningAccreditation(@PathVariable("id") Long id,
-                                                          @RequestBody QuestioningAccreditationDto questioningAccreditationDto) {
+    @Deprecated(since = "2.6.0")
+    public ResponseEntity<QuestioningAccreditationDto> postQuestioningAccreditation(@PathVariable("id") Long id,
+                                                                                    @RequestBody QuestioningAccreditationDto questioningAccreditationDto) {
 
+        log.warn("DEPRECATED");
         Questioning questioning = questioningService.findbyId(id);
 
         String idContact = questioningAccreditationDto.getIdContact();
@@ -110,8 +108,8 @@ public class QuestioningAccreditationController {
 
         List<QuestioningAccreditation> listContactAccreditations = setExistingAccreditations.stream()
                 .filter(acc -> acc.getIdContact().equals(idContact)
-                        && acc.getQuestioning().getIdPartitioning().equals(part.getId())
-                        && acc.getQuestioning().getSurveyUnit().getIdSu().equals(idSu))
+                               && acc.getQuestioning().getIdPartitioning().equals(part.getId())
+                               && acc.getQuestioning().getSurveyUnit().getIdSu().equals(idSu))
                 .toList();
 
         if (listContactAccreditations.isEmpty()) {
@@ -137,7 +135,7 @@ public class QuestioningAccreditationController {
 
         } else {
             // update accreditation
-            QuestioningAccreditation questioningAccreditation = listContactAccreditations.get(0);
+            QuestioningAccreditation questioningAccreditation = listContactAccreditations.getFirst();
             questioningAccreditationDto.setId(questioningAccreditation.getId());
             questioningAccreditation = convertToEntity(questioningAccreditationDto);
             questioningAccreditation.setQuestioning(questioning);
